# Quine-Mccluskey

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  QuineMccluskey  README.md
examples/: main.cpp
include/: QM.hpp  Term.hpp
src/: .#QM.hpp  .#main.cpp  QM.cpp  QM.h  QM.hpp  QM.tpp  Term.cpp  Term.h  Term.hpp  main.cpp
test/: .#Test.cpp  QMTest.cpp  TermTest.cpp  Test.cpp  main.cpp
